--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,7 @@
-asdasdasdasda
+/* Header */
+#header {
+ height:242PX;
+ margin:0px auto 15px auto;
+ font-family:Verdana, Arial, Helvetica, sans-serif;
+ color: #F5F5DC;  
+  }
