--- a/css/style.css
+++ b/css/style.css
@@ -13,5 +13,81 @@ background:	#F0FFFF url(images/bg.jpg) repeat-x;
  height:242PX;
  margin:0px auto 15px auto;
  font-family:Verdana, Arial, Helvetica, sans-serif;
- color: #F5F5DC;  
+ color: #A52A2A;  
   }
+
+/*Header Menu*/
+#topmenu {
+	display:block;
+	list-style:none;
+	padding:0 0px 0px 278px;
+	float: right;
+	width: 415px;
+}
+#topmenu li {
+	display:inline;
+}
+#topmenu a {
+	display:block;
+	float:left;
+	height:28px;
+	margin:0px 0px 0px0px;
+	text-decoration:none;
+	padding:9px 15px 0px 15px;
+	text-align:center;
+}
+#topmenu a, #topmenu a:visited, #topmenu a:active {
+	color:#FFFFFF;
+}
+#topmenu a:hover{
+	color:#ffffff;
+	background-color: #B52E10;
+}
+#topmenu .active a, #topmenu .active a:visited, #topmenu .active a:active{
+	color:#FFFFFF;
+	background-color: #B42D0F;
+}
+
+/*Content*/
+#content {
+	background-color: #FFFFFF;
+	
+}
+#mainpage {
+	width:700px;
+	float:left;
+	padding:5px 5px 5px 0px;
+	height:auto
+}
+#mainpage p {
+	line-height:22px;
+	margin:10px 0px 22px 0px;
+	text-align: justify;
+}
+#mainpage blockquote {
+	background:#efefef;
+	display:block; 
+	margin:5px;
+	font:Georgia, "Times New Roman", Times, serif; 
+	font-style:italic;}
+h1, h2, h3, h4, h5 {
+	color:#B32C0E;
+	font-weight:bold;
+	font-family: Arial, Helvetica, sans-serif;
+}
+#mainpage h1 {
+	font-size:24px;
+	color: #F2F7F3;
+}
+#mainpage h2 {
+	font-size:18px;
+	padding-top: 20px;
+	padding-bottom: 5px;
+	border-bottom: 1px solid #B52E10;
+}
+#mainpage h3 {
+	font-size:20px;}
+#mainpage h4 {
+	font-size:18px;}
+#mainpage h5 {
+	font-size:16px;}
