--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,18 @@ h1, h2, h3, h4, h5 {
 	font-size:18px;}
 #mainpage h5 {
 	font-size:16px;}
+
+#footer {
+margin:0 auto;
+	width:685px;
+	height:20px;
+	padding:10px;
+	color:#FFFFFF;
+	text-align: center;
+	background:#333333;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 11px;
+	clear: both;
+
+}
+
