--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-background: #FFFFFF url(images/bg.jpg) repeat-x;
+background-image: url("images/bg.jpg") repeat-x;
 }
 #wrap {
  width:700px;
