--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,21 @@
 body {
-background-image: url("images/bg.jpg"); 
-background-repeat: repeat-x;
-}
-#wrap {
- width:700px;
- margin:0px auto 15px auto;
+	background: #FFFFFF  url(images/bg.jpg) repeat-x;
+	}
+#wrap{
+	width:699px;
+	margin:0px auto 15px auto;
 	font-family:Verdana, Arial, Helvetica, sans-serif;
 	font-size:12px;
 	color:#666666;
 }
-/* Header */
-#header {
- 	height:242PX;
- 	background-image: url("images/header.png") 
-	background-repeat:no-repeat;
+
+/*Header*/
+
+#header{
+	height:242px;
+	background:url(images/header.png) no-repeat left top;
 	clear: both;
-  }
-
-#topbar {
-height:78px;
 }
-
 /*Header Menu*/
 #topmenu {
 	display:block;
@@ -56,7 +51,6 @@ height:78px;
 /*Content*/
 #content {
 	background-color: #FFFFFF;
-	
 }
 #mainpage {
 	width:700px;
@@ -97,8 +91,9 @@ h1, h2, h3, h4, h5 {
 #mainpage h5 {
 	font-size:16px;}
 
+/*footer*/
 #footer {
-margin:0 auto;
+	margin:0 auto;
 	width:685px;
 	height:20px;
 	padding:10px;
@@ -108,6 +103,8 @@ margin:0 auto;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
 	font-size: 11px;
 	clear: both;
-
 }
 
+#topbar{
+	height:78px;
+}
