--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
 
 #header{
 	height:242px;
-	background:url(images/header.png) no-repeat left top;
+	background:url("images/header.png") no-repeat left top;
 	clear: both;
 }
 /*Header Menu*/
