--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body{
 	font:Georgia, "Times New Roman", Times, serif; 
 	font-style:italic;}
 h1, h2, h3, h4, h5 {
-	color:#B32C0E;
+	color:red;
 	font-weight:bold;
 	font-family: Arial, Helvetica, sans-serif;
 }
