--- a/css/style.css
+++ b/css/style.css
@@ -70,13 +70,12 @@ body{
 	font:Georgia, "Times New Roman", Times, serif; 
 	font-style:italic;}
 h1, h2, h3, h4, h5 {
-	color:#F2F7F3;
+	color:#A52A2A;
 	font-weight:bold;
 	font-family: Arial, Helvetica, sans-serif;
 }
 #mainpage h1 {
 	font-size:24px;
-	color: #F2F7F3;
 }
 #mainpage h2 {
 	font-size:18px;
