--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,17 @@ h1, h2, h3, h4, h5 {
 #topbar{
 	height:78px;
 }
+table {
+border-spacing: 5px;
+}
 
 table, th, td {
 border:1px solid red;
-border-collapse: collapse;
+padding: 15px;	
 }
+th {
+text-align: left;
+}
+
+
+
