--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body{
 	height:242px;
 	background:url("https://github.com/dipaish/www_dkc/blob/master/images/header.png?raw=true") no-repeat left top;
 	clear: both;
+	position: fixed;
 }
 /*Header Menu*/
 #topmenu {
